# AmbiTap-Max

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-info.json
.github/workflows/: ci.yml  style.yml
cmake/: ambitap_ui.cmake
docs/: ambitap.bed2hoa~.maxref.xml  ambitap.binaural~.maxref.xml  ambitap.decode~.maxref.xml  ambitap.encode~.maxref.xml  ambitap.plate~.maxref.xml  ambitap.room~.maxref.xml  ambitap.xtc~.maxref.xml
help/: ambitap.bed2hoa~.maxhelp  ambitap.binaural~.maxhelp  ambitap.compress~.maxhelp  ambitap.decode~.maxhelp  ambitap.directional~.maxhelp  ambitap.distance~.maxhelp  ambitap.doppler~.maxhelp  ambitap.encode~.maxhelp  ambitap.energyvec~.maxhelp  ambitap.format~.maxhelp  ambitap.grid~.maxhelp  ambitap.mirror~.maxhelp  ambitap.panbin~.maxhelp  ambitap.plate~.maxhelp  ambitap.room~.maxhelp  ambitap.rotate~.maxhelp  ambitap.vmic~.maxhelp  ambitap.xtc~.maxhelp
patchers/: ambitap.roomdesigner.maxpat  ambitap.ui-tour.maxpat  ambitap.xtcdesigner.maxpat
patchers/booklet/: 01-first-sounds.maxpat  02-turning-your-head.maxpat  03-out-of-the-headphones.maxpat  04-placing-sources.maxpat  05-distance.maxpat  06-rooms.maxpat  07-decoding.maxpat  08-binaural.maxpat  09-watching.maxpat  10-mixing.maxpat  11-transaural.maxpat  12-beds.maxpat
source/projects/ambitap.bed2hoa_tilde/: CMakeLists.txt  ambitap.bed2hoa_tilde.cpp
source/projects/ambitap.binaural_tilde/: CMakeLists.txt  ambitap.binaural_tilde.cpp
source/projects/ambitap.compress_tilde/: CMakeLists.txt  ambitap.compress_tilde.cpp
source/projects/ambitap.decode_tilde/: CMakeLists.txt  ambitap.decode_tilde.cpp
source/projects/ambitap.directional_tilde/: CMakeLists.txt  ambitap.directional_tilde.cpp
source/projects/ambitap.distance_tilde/: CMakeLists.txt  ambitap.distance_tilde.cpp
source/projects/ambitap.doppler_tilde/: CMakeLists.txt  ambitap.doppler_tilde.cpp
source/projects/ambitap.encode_tilde/: CMakeLists.txt  ambitap.encode_tilde.cpp
source/projects/ambitap.energyvec_tilde/: CMakeLists.txt  ambitap.energyvec_tilde.cpp
source/projects/ambitap.format_tilde/: CMakeLists.txt  ambitap.format_tilde.cpp
source/projects/ambitap.grid_tilde/: CMakeLists.txt  ambitap.grid_tilde.cpp
source/projects/ambitap.mirror_tilde/: CMakeLists.txt  ambitap.mirror_tilde.cpp
source/projects/ambitap.panbin_tilde/: CMakeLists.txt  ambitap.panbin_tilde.cpp
source/projects/ambitap.plate_tilde/: CMakeLists.txt  ambitap.plate_tilde.cpp
source/projects/ambitap.room_tilde/: CMakeLists.txt  ambitap.room_tilde.cpp
source/projects/ambitap.rotate_tilde/: CMakeLists.txt  ambitap.rotate_tilde.cpp
source/projects/ambitap.vmic_tilde/: CMakeLists.txt  ambitap.vmic_tilde.cpp
source/projects/ambitap.xtc_tilde/: CMakeLists.txt  ambitap.xtc_tilde.cpp
